examples/test/testpolicy19796.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy19796
  namespace: namespace26
spec:
  podSelector:
    matchLabels:
      key35: value20
      key46: value45
      key1: value37
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key34: value47
          key41: value9
          key0: value37
      podSelector:
        matchLabels:
          key30: value3
          key26: value32
